Fixed wrapping and spacing with code.

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
+  margin: 1em 0;
 }
 
 h1 { margin-bottom: 1em; }
@@ -156,7 +157,7 @@ h2.post-title {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
-  white-space: pre-wrap;
+  overflow-x: auto;
 }
 
 #post ul, #post ol {
